[gd_scene load_steps=9 format=3 uid="uid://ch5b8bd1e1ha2"]

[ext_resource type="Script" path="res://mapod4d_core/mapod4d_visitor/mapod4d_hud/mapod4d_hud.gd" id="1_gdbq4"]
[ext_resource type="Script" path="res://mapod4d_core/mapod4d_visitor/mapod4d_hud/view_finder.gd" id="1_vm5tx"]
[ext_resource type="Texture2D" uid="uid://e32tiyx053fp" path="res://assets/icons/keyboard/m_white_medium.png" id="3_7qyrb"]
[ext_resource type="Texture2D" uid="uid://c67qy0qtq4t5e" path="res://assets/icons/keyboard/e_white_medium.png" id="4_pwr2k"]
[ext_resource type="Texture2D" uid="uid://dlrm74bo8ji7l" path="res://assets/icons/xbox_360/xb360_x_medium.png" id="5_mipqt"]
[ext_resource type="Texture2D" uid="uid://bh2aek2raxaio" path="res://assets/icons/keyboard/r_white_medium.png" id="6_45k1r"]
[ext_resource type="Texture2D" uid="uid://dhjmelcpgaupg" path="res://assets/icons/xbox_360/xb360_y_medium.png" id="7_4erwr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gux8h"]
bg_color = Color(0.376471, 0.376471, 0.376471, 0.176471)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Mapod4dHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gdbq4")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewFinder" type="Control" parent="CenterContainer"]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
script = ExtResource("1_vm5tx")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="Left" type="MarginContainer" parent="GridContainer"]
offset_right = 477.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Left"]
offset_left = 40.0
offset_top = 40.0
offset_right = 467.0
offset_bottom = 1080.0

[node name="Help" type="PanelContainer" parent="GridContainer/Left/VBoxContainer"]
offset_right = 427.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gux8h")

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Left/VBoxContainer/Help"]
offset_right = 427.0
offset_bottom = 50.0

[node name="InfoTexture" type="TextureRect" parent="GridContainer/Left/VBoxContainer/Help/HBoxContainer"]
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("3_7qyrb")

[node name="Info" type="Label" parent="GridContainer/Left/VBoxContainer/Help/HBoxContainer"]
offset_left = 54.0
offset_top = 12.0
offset_right = 312.0
offset_bottom = 38.0
text = "Per richiamare il menu principale"

[node name="Planet" type="PanelContainer" parent="GridContainer/Left/VBoxContainer"]
offset_top = 54.0
offset_right = 427.0
offset_bottom = 107.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gux8h")

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Left/VBoxContainer/Planet"]
offset_right = 427.0
offset_bottom = 53.0

[node name="Title" type="Label" parent="GridContainer/Left/VBoxContainer/Planet/VBoxContainer"]
offset_right = 427.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "WHEREAMI"

[node name="PlanetData" type="Label" parent="GridContainer/Left/VBoxContainer/Planet/VBoxContainer"]
offset_top = 30.0
offset_right = 427.0
offset_bottom = 53.0

[node name="Altitude" type="PanelContainer" parent="GridContainer/Left/VBoxContainer"]
offset_top = 111.0
offset_right = 427.0
offset_bottom = 137.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gux8h")

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Left/VBoxContainer/Altitude"]
offset_right = 427.0
offset_bottom = 26.0

[node name="Title" type="Label" parent="GridContainer/Left/VBoxContainer/Altitude/HBoxContainer"]
offset_right = 75.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "ALTITUDE"

[node name="AltitudeData" type="Label" parent="GridContainer/Left/VBoxContainer/Altitude/HBoxContainer"]
offset_left = 79.0
offset_top = 1.0
offset_right = 80.0
offset_bottom = 24.0

[node name="Speed" type="PanelContainer" parent="GridContainer/Left/VBoxContainer"]
offset_top = 141.0
offset_right = 427.0
offset_bottom = 167.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gux8h")

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Left/VBoxContainer/Speed"]
offset_right = 427.0
offset_bottom = 26.0

[node name="Title" type="Label" parent="GridContainer/Left/VBoxContainer/Speed/HBoxContainer"]
offset_right = 49.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "SPEED"

[node name="SpeedData" type="Label" parent="GridContainer/Left/VBoxContainer/Speed/HBoxContainer"]
offset_left = 53.0
offset_top = 1.0
offset_right = 54.0
offset_bottom = 24.0

[node name="Information" type="PanelContainer" parent="GridContainer/Left/VBoxContainer"]
custom_minimum_size = Vector2(0, 420)
offset_top = 171.0
offset_right = 427.0
offset_bottom = 591.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gux8h")

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Left/VBoxContainer/Information"]
offset_right = 427.0
offset_bottom = 420.0

[node name="Title" type="Label" parent="GridContainer/Left/VBoxContainer/Information/VBoxContainer"]
offset_right = 427.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "INFORMATION"

[node name="InformationData" type="Label" parent="GridContainer/Left/VBoxContainer/Information/VBoxContainer"]
offset_top = 30.0
offset_right = 427.0
offset_bottom = 53.0

[node name="InteractionE" type="PanelContainer" parent="GridContainer/Left/VBoxContainer"]
unique_name_in_owner = true
offset_top = 595.0
offset_right = 427.0
offset_bottom = 645.0

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Left/VBoxContainer/InteractionE"]
offset_right = 427.0
offset_bottom = 50.0

[node name="KeyE" type="TextureRect" parent="GridContainer/Left/VBoxContainer/InteractionE/HBoxContainer"]
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("4_pwr2k")

[node name="JoyPadX" type="TextureRect" parent="GridContainer/Left/VBoxContainer/InteractionE/HBoxContainer"]
offset_left = 54.0
offset_right = 104.0
offset_bottom = 50.0
texture = ExtResource("5_mipqt")

[node name="InteractionEData" type="Label" parent="GridContainer/Left/VBoxContainer/InteractionE/HBoxContainer"]
offset_left = 108.0
offset_top = 13.0
offset_right = 109.0
offset_bottom = 36.0

[node name="InteractionR" type="PanelContainer" parent="GridContainer/Left/VBoxContainer"]
unique_name_in_owner = true
offset_top = 649.0
offset_right = 427.0
offset_bottom = 699.0

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Left/VBoxContainer/InteractionR"]
offset_right = 427.0
offset_bottom = 50.0

[node name="KeyR" type="TextureRect" parent="GridContainer/Left/VBoxContainer/InteractionR/HBoxContainer"]
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("6_45k1r")

[node name="JoyPadY" type="TextureRect" parent="GridContainer/Left/VBoxContainer/InteractionR/HBoxContainer"]
offset_left = 54.0
offset_right = 104.0
offset_bottom = 50.0
texture = ExtResource("7_4erwr")

[node name="InteractionRData" type="Label" parent="GridContainer/Left/VBoxContainer/InteractionR/HBoxContainer"]
offset_left = 108.0
offset_top = 13.0
offset_right = 109.0
offset_bottom = 36.0

[node name="DebugLeft" type="MarginContainer" parent="GridContainer"]
offset_left = 481.0
offset_right = 958.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/DebugLeft"]
offset_right = 477.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/DebugLeft/VBoxContainer"]
offset_right = 477.0
offset_bottom = 26.0

[node name="LabelStatus" type="Label" parent="GridContainer/DebugLeft/VBoxContainer/HBoxContainer"]
offset_right = 54.0
offset_bottom = 26.0
text = "Status:"

[node name="Status" type="Label" parent="GridContainer/DebugLeft/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 58.0
offset_top = 1.0
offset_right = 59.0
offset_bottom = 24.0

[node name="DebugRight" type="MarginContainer" parent="GridContainer"]
offset_left = 962.0
offset_right = 1439.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right" type="MarginContainer" parent="GridContainer"]
offset_left = 1443.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
